# orly

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: client.rs  epub.rs  error.rs  html.rs  lib.rs  main.rs  model.rs  models.rs  templates.rs
src/epub/: builder.rs  lxml.rs  mod.rs  zip.rs
templates/: base.html  base.xhtml  chapter.xhtml  container.xml  content.xml  ibooks.xml  navpoint.xml  toc.xml
