[package]
name = "orly"
version = "0.1.3"
edition = "2021"
authors = ["hurlenko"]
description = "Download O'Reilly books as EPUB"
license-file = "LICENSE"
repository = "https://github.com/hurlenko/orly"
readme = "README.md"
exclude = [
    ".github/*",
]

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.11", features = ["json", "cookies", "gzip", "native-tls-vendored"] }
url = "2.2.2"
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0.137"
anyhow = "1.0.58"
thiserror = "1.0.31"
chrono = "0.4.19"
libxml = "0.3.1"
futures = "0.3.21"
askama = "0.11.1"
bytes = "1.1.0"
zip = "0.6.2"
lazy_static = "1.4.0"
clap = { version = "3.2.8", features = ["derive"] }
sanitize-filename = "0.4.0"
log = "0.4.17"
fern = { version="0.6.1", features=["colored"] }
parcel_css = "1.0.0-alpha.27"
image = "0.24.2"
mime_guess = "2.0.4"
