[package]
name = "orly"
version = "0.1.5"
edition = "2021"
authors = ["hurlenko"]
description = "Download O'Reilly books as EPUB"
license-file = "LICENSE"
repository = "https://github.com/hurlenko/orly"
readme = "README.md"
exclude = [
    ".github/*",
]
rust-version = "1.79"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.18", features = ["json", "cookies", "gzip", "native-tls-vendored"] }
url = "2.4.0"
tokio = { version = "1.29.1", features = ["full"] }
serde = "1.0.171"
anyhow = "1.0.71"
thiserror = "1.0.43"
chrono = "0.4.26"
libxml = "0.3.2"
futures = "0.3.28"
askama = "0.12.1"
bytes = "1.6.0"
zip = "0.6.6"
lazy_static = "1.5.0"
clap = { version = "4.3.12", features = ["derive"] }
sanitize-filename = "0.5.0"
log = "0.4.22"
fern = { version="0.6.2", features=["colored"] }
lightningcss = "1.0.0-alpha.44"
image = "0.25.1"
mime_guess = "2.0.5"
