[package]
name = "orly"
version = "0.1.8"
edition = "2021"
authors = ["hurlenko"]
description = "Download O'Reilly books as EPUB"
license-file = "LICENSE"
repository = "https://github.com/hurlenko/orly"
readme = "README.md"
exclude = [
    ".github/*",
]
rust-version = "1.71.0"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "cookies", "gzip", "rustls-tls"] }
url = "2.5.2"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
anyhow = "1.0.86"
thiserror = "1.0.61"
chrono = "0.4.38"
libxml = "=0.3.3"
futures = "0.3.30"
askama = "0.12.1"
bytes = "1.6.0"
zip = "0.6.6"
lazy_static = "1.5.0"
clap = { version = "=4.3.12", features = ["derive"] }
sanitize-filename = "0.5.0"
log = "0.4.22"
fern = { version="0.6.2", features=["colored"] }
lightningcss = "1.0.0-alpha.57"
image = "0.24.6"
mime_guess = "2.0.5"
